gcc/testsuite/algol68/compile/error-mode-stropping-1.a68
begin struct (int i, real r) j;
      j := "joo" { dg-error "char.*struct \\(int i, real r\\)" }
end
